# dnd-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build-and-release.yml  desktop-build-and-release.yml  web-build-and-deploy.yml
crates/android-app/: Cargo.toml  README.md
crates/android-app/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/desktop/: Cargo.toml
crates/desktop-app/: .gitignore  Cargo.toml
crates/desktop-app/src/: main.rs
crates/desktop/src/: level.rs  main.rs
crates/desktop/src/level/: gen.rs  grid.rs  mod.rs
crates/level/: Cargo.toml
crates/level/benches/: bench.rs
crates/level/src/: gen.rs  grid.rs  iterative_solver.rs  lib.rs  recursive_solver.rs  smart_solver.rs  solver.rs
crates/level/src/test/: solver.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/web-app/: Cargo.toml  README.md
crates/web-app/assets/: index.html
crates/web-app/src/: lib.rs
