[workspace]
resolver = "2"         # Important! wgpu/Bevy needs this!
members = ["crates/*"]

[workspace.package]
version = "0.1.15"
edition = "2021"
authors = ["Bjarke Bondo Andersen <andersen.bjarke@gmail.com>"]

[workspace.dependencies]
bevy = { version = "0.14.1", default-features = false, features = [
    "bevy_state",
    "bevy_ui",
    "default_font",
    "multi_threaded",
    "png",
    "x11",
] }
criterion = { version = "0.5.1", default-features = false, features = [
    "plotters",
    "cargo_bench_support",
] }
chrono = { version = "0.4.38", default-features = false, features = [
    "now",
    "wasmbind",
] }
fastrand = { version = "2.1.1" }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rayon = { version = "1.10.0" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]

# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1

# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Tell `rustc` to optimize for small code size when building for wasm
[profile.release.package."dnd-rs-web-app"]
opt-level = "s"

[profile.bench]
debug = true
