[package]
name = "dnd-rs-level"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bevy.workspace = true
chrono.workspace = true
fastrand.workspace = true
log.workspace = true
rayon.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false
